[package]
name = "rayon-core"
version = "1.12.1"
authors = ["Niko Matsakis <niko@alum.mit.edu>",
           "Josh Stone <cuviper@gmail.com>"]
description = "Core APIs for Rayon"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rayon-rs/rayon"
documentation = "https://docs.rs/rayon/"
rust-version = "1.63"
edition = "2021"
links = "rayon-core"
build = "build.rs"
readme = "README.md"
keywords = ["parallel", "thread", "concurrency", "join", "performance"]
categories = ["concurrency"]

# Some dependencies may not be their latest version, in order to support older rustc.
[dependencies]
crossbeam-deque = "0.8.1"
crossbeam-utils = "0.8.0"
wasm_sync = { version = "0.1.0", optional = true }

[features]

# This feature switches to a spin-lock implementation on the browser's
# main thread to avoid the forbidden `atomics.wait`.
#
# Only useful on the `wasm32-unknown-unknown` target.
web_spin_lock = ["dep:wasm_sync"]

[dev-dependencies]
rand = "0.8"
rand_xorshift = "0.3"
scoped-tls = "1.0"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

[[test]]
name = "stack_overflow_crash"
path = "tests/stack_overflow_crash.rs"

# NB: having one [[test]] manually defined means we need to declare them all

[[test]]
name = "double_init_fail"
path = "tests/double_init_fail.rs"

[[test]]
name = "init_zero_threads"
path = "tests/init_zero_threads.rs"

[[test]]
name = "scope_join"
path = "tests/scope_join.rs"

[[test]]
name = "simple_panic"
path = "tests/simple_panic.rs"

[[test]]
name = "scoped_threadpool"
path = "tests/scoped_threadpool.rs"

[[test]]
name = "use_current_thread"
path = "tests/use_current_thread.rs"
