[package]
name = "rayon-demo"
publish = false

edition.workspace = true
rust-version.workspace = true

[dependencies]
rayon = { path = "../" }
cgmath = "0.18"
docopt = "1"
fixedbitset = "0.5"
glium = "0.36"
once_cell = "1.17.1"
rand.workspace = true
rand_xorshift.workspace = true
regex = "1"
winit = "0.30"

[dependencies.serde]
version = "1.0.85"
features = ["derive"]

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi"] }

[dev-dependencies]
doc-comment = "0.3"
num = "0.4"
