[package]
name = "rayon-futures"
version = "0.1.0" # reminder to update html_root_url attribute
authors = ["Niko Matsakis <niko@alum.mit.edu>",
           "Josh Stone <cuviper@gmail.com>"]
description = "Futures integration into Rayon"
license = "Apache-2.0/MIT"
repository = "https://github.com/nikomatsakis/rayon"
documentation = "https://docs.rs/rayon-futures/"
readme = "README.md"
keywords = ["parallel", "thread", "concurrency", "join", "performance"]
categories = ["concurrency"]

[dependencies]
rayon-core = { version = "1.2.2", path = "../rayon-core" }
futures = "0.1.16"

[dev-dependencies]
compiletest_rs = "0.3"
