[package]
name = "rayon-futures"
version = "0.1.1" # reminder to update html_root_url attribute
authors = ["Niko Matsakis <niko@alum.mit.edu>",
           "Josh Stone <cuviper@gmail.com>"]
description = "(deprecated) Futures integration into Rayon"
license = "Apache-2.0/MIT"
repository = "https://github.com/rayon-rs/rayon"
documentation = "https://docs.rs/rayon-futures/"
readme = "README.md"
keywords = ["parallel", "thread", "concurrency", "join", "performance"]
categories = ["concurrency"]

[dependencies]
rayon-core = { version = "~1.6", path = "../rayon-core" }
futures = "0.1.16"

[badges]
maintenance = { status = "deprecated" }
