[package]
name = "rayon"
version = "0.7.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
description = "Simple work-stealing parallelism for Rust"
license = "Apache-2.0/MIT"
repository = "https://github.com/nikomatsakis/rayon"
documentation = "https://docs.rs/rayon/"

[dependencies]
rayon-core = { version = "0.7", path = "../" }
